# Lumina

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  README_LINUX.md  docker-compose.release.yml  docker-compose.yml  linux_install.sh  push_to_hub.ps1  pyproject.toml
.trae/documents/: plan_20260209_142235.md  plan_20260209_144257.md
backend/: requirements.txt
backend/app/: __init__.py  main.py
backend/app/controllers/: auth_controller.py  base_controller.py  config_controller.py  kernel_controller.py  node_controller.py  official_controller.py  usque_controller.py  warp_controller.py
backend/app/routes/: auth.py  config.py  kernel.py  nodes.py  setup.py  system.py  warp.py
backend/app/utils/: http_redirect.py  http_tls_multiplexer.py  logger.py  tls.py  version.py
backend/cont-init.d/: 01-init.sh
backend/s6-rc.d/socat/: run
backend/s6-rc.d/usque/: run
backend/s6-rc.d/warp-svc/: run
backend/s6-rc.d/warppool-api/: run
controller-app/: Dockerfile.monolith  entrypoint.sh  requirements.txt  socat.service  supervisord.conf  warppool-api.service
controller-app/app/: __init__.py  kernel_version_manager.py  linux_tun_manager.py  main.py  official_controller.py  usque_controller.py  warp_controller.py
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.vue  style.css
frontend/src/components/: HomePage.vue  LogsPage.vue
frontend/src/composables/: usePolling.js  useWarp.js
frontend/src/router/: index.js
warp-instance/: Dockerfile  entrypoint.sh
(+8 files in other folders)
